Fix error message when processing XIncludes with fallbacks

Fixes bug #616491
https://bugzilla.gnome.org/show_bug.cgi?id=616491

Based on merge request !41